# graph-RAG_CookBook

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  SPEC.md  docker-compose.yml  pyproject.toml
.claude/: .project-type
.claude/state/: CHANGELOG-DEV.md  DECISIONS.md  HANDOFF.md  LESSONS-LEARNED.md  MEMORY.md  TODOS.md
.github/workflows/: ci.yml
config/: default.yaml  publishing.yaml  sources.yaml
config/extraction_prompts/: v0.txt  v1.txt
docs/: architecture.md  consumer-guide.md  extraction-prompt.md  llm-backends.md  security-checklist-sprint2.md
evals/: README.md  thresholds.yaml
evals/harness/: __init__.py  gates.py  hallucination.py  metrics.py  prompt_eval.py  runner.py  test_gates.py  test_metrics.py  types.py
examples/consumer/: README.md  fetch_and_query.py  fixture-graph.json
examples/reference-corpus/: README.md
schemas/: graph-v1.schema.json
scripts/: fetch_reference_corpus.py
src/knowledge_graph/: __init__.py  cli.py  config.py  pipeline.py
src/knowledge_graph/canonicalizer/: __init__.py  canonicalizer.py  paths.py  schema.py
src/knowledge_graph/chunker/: __init__.py  chunker.py  tokens.py
src/knowledge_graph/emitter/: __init__.py
src/knowledge_graph/exporter/: __init__.py
src/knowledge_graph/extractor/: __init__.py  cache.py  dedup.py  extractor.py  prompts.py  schemas.py
src/knowledge_graph/extractor/backends/: __init__.py  anthropic.py  base.py  mock.py  openai_compat.py
src/knowledge_graph/graph/: __init__.py  builder.py  client.py  ids.py  schema.py
src/knowledge_graph/mcp_server/: __init__.py
src/knowledge_graph/publisher/: __init__.py
src/knowledge_graph/scrapers/: __init__.py
src/knowledge_graph/staleness/: __init__.py
src/knowledge_graph/vector/: __init__.py
tests/: conftest.py  test_backends.py  test_canonicalizer.py  test_chunker.py  test_extractor.py  test_graph_builder.py  test_hallucination.py  test_prompt_eval.py  test_smoke.py
